--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,11 @@
   <packaging>pom</packaging>
   <name>ShopmeProject</name>
   <description>Root project</description>
+  
+  
+  <modules>
+  	<module>ShopmeCommon</module>
+  	<module>ShopmeWebParent</module>
+  </modules>
+  
 </project>
